@@ -1,16 +1,30 @@
-// Class for description of subtraction of two CSG solids: A - B  !!!
+// This code implementation is the intellectual property of
+// the GEANT4 collaboration.
 //
+// By copying, distributing or modifying the Program (or any work
+// based on the Program) you indicate your acceptance of this statement,
+// and all its terms.
+//
+// $Id: G4SubtractionSolid.hh,v 1.3 2000-04-27 09:59:37 gcosmo Exp $
+// GEANT4 tag $Name: not supported by cvs2svn $
+//
+//
+// class G4SubtractionSolid
+//
+// Class description:
+//
+// Class for description of subtraction of two CSG solids: A - B.
+
 // History: 
 //
-// 14.10.98 V.Grichine - first implementation
-//
+// 14.10.98 V.Grichine - first implementation.
+
 
 #ifndef G4SUBTRACTIONSOLID_HH
 #define G4SUBTRACTIONSOLID_HH
 
 #include "G4BooleanSolid.hh"
 #include "G4VSolid.hh"
-// #include "G4PlacedSolid.hh"
 
 #include "G4RotationMatrix.hh"
 #include "G4ThreeVector.hh"
@@ -18,29 +32,32 @@
 #include "G4AffineTransform.hh"
 
 
-
-class G4SubtractionSolid: public G4BooleanSolid
+class G4SubtractionSolid : public G4BooleanSolid
 {
-public:
-                  G4SubtractionSolid(  const G4String& pName,
-                                             G4VSolid* pSolidA ,
-                                             G4VSolid* pSolidB   ) ;
+  public:  // with description
 
-                  G4SubtractionSolid(  const G4String& pName,
-                                             G4VSolid* pSolidA ,
-                                             G4VSolid* pSolidB ,
-                                             G4RotationMatrix* rotMatrix,
-                                       const G4ThreeVector& transVector   ) ;
+    G4SubtractionSolid(  const G4String& pName,
+                               G4VSolid* pSolidA ,
+                               G4VSolid* pSolidB   ) ;
 
-                  G4SubtractionSolid(  const G4String& pName,
-                                             G4VSolid* pSolidA ,
-                                             G4VSolid* pSolidB ,
-                                       const G4Transform3D& transform   ) ;
+    G4SubtractionSolid(  const G4String& pName,
+                               G4VSolid* pSolidA ,
+                               G4VSolid* pSolidB ,
+                               G4RotationMatrix* rotMatrix,
+                         const G4ThreeVector& transVector   ) ;
 
-                  virtual ~G4SubtractionSolid() ;
+    G4SubtractionSolid(  const G4String& pName,
+                               G4VSolid* pSolidA ,
+                               G4VSolid* pSolidB ,
+                         const G4Transform3D& transform   ) ;
 
+    virtual ~G4SubtractionSolid() ;
 
-     G4bool CalculateExtent(const EAxis pAxis,
+    virtual G4GeometryType  GetEntityType() const ;
+
+  public:  // without description
+
+    G4bool CalculateExtent( const EAxis pAxis,
 			    const G4VoxelLimits& pVoxelLimit,
 			    const G4AffineTransform& pTransform,
 			    G4double& pMin, G4double& pMax) const ;
@@ -67,18 +84,16 @@ public:
 	                    const G4int n,
                             const G4VPhysicalVolume* pRep ) ;
                                    
-    virtual G4GeometryType  GetEntityType() const 
-    { return G4String("G4SubtractionSolid"); }
-
     void DescribeYourselfTo ( G4VGraphicsScene& scene ) const ;
     G4Polyhedron* CreatePolyhedron () const ;
     G4NURBS*      CreateNURBS      () const ;
 
-protected:
+};
 
-private:
-
-} ;
+inline G4GeometryType G4SubtractionSolid::GetEntityType() const 
+{
+  return G4String("G4SubtractionSolid");
+}
 
 #endif
 
