@@ -1,47 +1,64 @@
-// Class for description of intersection of two CSG solids
+// This code implementation is the intellectual property of
+// the GEANT4 collaboration.
 //
+// By copying, distributing or modifying the Program (or any work
+// based on the Program) you indicate your acceptance of this statement,
+// and all its terms.
+//
+// $Id: G4UnionSolid.hh,v 1.4 2000-04-27 09:59:37 gcosmo Exp $
+// GEANT4 tag $Name: not supported by cvs2svn $
+//
+//
+// class G4UnionSolid
+//
+// Class description:
+//
+// Class for description of union of two CSG solids.
+
 // History: 
 //
-// 12.09.98 V.Grichine
-//
+// 12.09.98 V.Grichine, created.
 
 #ifndef G4UNIONSOLID_HH
 #define G4UNIONSOLID_HH
 
 #include "G4BooleanSolid.hh"
 #include "G4VSolid.hh"
-// #include "G4PlacedSolid.hh"
 
 #include "G4RotationMatrix.hh"
 #include "G4ThreeVector.hh"
 #include "G4Transform3D.hh"
 #include "G4AffineTransform.hh"
 
-class G4UnionSolid: public G4BooleanSolid
+class G4UnionSolid : public G4BooleanSolid
 {
-public:
-                  G4UnionSolid( const G4String& pName,
-                                       G4VSolid* pSolidA ,
-                                       G4VSolid* pSolidB   ) ;
+  public:  // with description
 
-                  G4UnionSolid( const G4String& pName,
-                                      G4VSolid* pSolidA ,
-                                      G4VSolid* pSolidB ,
-                                      G4RotationMatrix* rotMatrix,
-                                const G4ThreeVector& transVector    ) ;
+    G4UnionSolid( const G4String& pName,
+                        G4VSolid* pSolidA ,
+                        G4VSolid* pSolidB   ) ;
 
-                  G4UnionSolid( const G4String& pName,
-                                      G4VSolid* pSolidA ,
-                                      G4VSolid* pSolidB ,
-                                const G4Transform3D& transform   ) ;
+    G4UnionSolid( const G4String& pName,
+                        G4VSolid* pSolidA ,
+                        G4VSolid* pSolidB ,
+                        G4RotationMatrix* rotMatrix,
+                  const G4ThreeVector& transVector    ) ;
 
-                 virtual ~G4UnionSolid() ;
+    G4UnionSolid( const G4String& pName,
+                        G4VSolid* pSolidA ,
+                        G4VSolid* pSolidB ,
+                  const G4Transform3D& transform   ) ;
 
+    virtual ~G4UnionSolid() ;
 
-     G4bool CalculateExtent(const EAxis pAxis,
-				   const G4VoxelLimits& pVoxelLimit,
-				   const G4AffineTransform& pTransform,
-				   G4double& pMin, G4double& pMax) const ;
+    virtual G4GeometryType  GetEntityType() const ;
+
+  public:  // without description
+
+    G4bool CalculateExtent( const EAxis pAxis,
+			    const G4VoxelLimits& pVoxelLimit,
+			    const G4AffineTransform& pTransform,
+				  G4double& pMin, G4double& pMax) const ;
        
     EInside Inside( const G4ThreeVector& p ) const ;
 
@@ -65,18 +82,16 @@ public:
 	                    const G4int n,
                             const G4VPhysicalVolume* pRep ) ;
                                    
-    virtual G4GeometryType  GetEntityType() const 
-    { return G4String("G4UnionSolid"); }
-
     void DescribeYourselfTo ( G4VGraphicsScene& scene ) const ;
     G4Polyhedron* CreatePolyhedron () const ;
     G4NURBS*      CreateNURBS      () const ;
 
-protected:
+};
 
-private:
-
-} ;
+inline G4GeometryType G4UnionSolid::GetEntityType() const 
+{
+  return G4String("G4UnionSolid");
+}
 
 #endif
 
