@@ -1,3 +1,13 @@
+// This code implementation is the intellectual property of
+// the GEANT4 collaboration.
+//
+// By copying, distributing or modifying the Program (or any work
+// based on the Program) you indicate your acceptance of this statement,
+// and all its terms.
+//
+// $Id: G4DisplacedSolid.cc,v 1.11 2000-04-27 09:59:39 gcosmo Exp $
+// GEANT4 tag $Name: not supported by cvs2svn $
+//
 // Implementation for G4DisplacedSolid class for boolean 
 // operations between other solids
 //
